--- a/userscript/package.json
+++ b/userscript/package.json
@@ -3,10 +3,13 @@
     "version": "1.1.0",
     "private": true,
     "dependencies": {
+        "bootstrap": "^4.5.3",
         "react": "^16.12.0",
         "react-app-rewired": "^2.1.5",
+        "react-bootstrap": "^1.3.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "^3.4.3"
+        "react-scripts": "^3.4.3",
+        "route-parser": "0.0.5"
     },
     "scripts": {
         "start": "PORT=8124 react-app-rewired start",
