--- a/userscript/package.json
+++ b/userscript/package.json
@@ -2,27 +2,21 @@
     "name": "react-userscripts",
     "version": "1.4.0",
     "private": true,
+    "type": "module",
     "dependencies": {
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^5.3.3",
         "file-saver": "^2.0.5",
-        "react": "^16.12.0",
-        "react-app-rewired": "^2.1.5",
-        "react-bootstrap": "^1.3.0",
-        "react-dom": "^16.12.0",
-        "react-scripts": "^3.4.3",
-        "route-parser": "0.0.5"
+        "react": "^18.3.1",
+        "react-bootstrap": "^1.6.8",
+        "react-dom": "^18.3.1",
+        "route-parser": "0.0.5",
+        "vite": "^5.2.11"
     },
     "scripts": {
-        "start": "npm run build-styles && PORT=8124 react-app-rewired start",
-        "finalize": "mkdir -p ../dist && cp src/userscript-header.js ../dist/react-userscripts.user.js && cat build/static/js/main.js >> ../dist/react-userscripts.user.js",
-        "build": "npm run build-styles && react-app-rewired build && npm run finalize",
-        "debug-build": "react-app-rewired --inspect-brk=5858 build && npm run finalize",
-        "build-styles": "lessc src/namespaced-bootstrap.less src/namespaced-bootstrap.css",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
+        "start": "npm-run-all --parallel build:watch preview",
+        "preview": "vite preview",
+        "build:watch": "vite build --watch",
+        "build": "vite build"
     },
     "browserslist": {
         "production": [
@@ -37,6 +31,7 @@
         ]
     },
     "devDependencies": {
-        "less": "^4.1.1"
+        "less": "^4.2.0",
+        "npm-run-all": "^4.1.5"
     }
 }
